# LexiFlow-AI

./: README.md
lexiflow-ai/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.sh
lexiflow-ai/src/lexiflow/: __init__.py  main.py
lexiflow-ai/src/lexiflow/agents/: __init__.py  base.py  critic.py  retriever.py  synthesizer.py
lexiflow-ai/src/lexiflow/api/: __init__.py
lexiflow-ai/src/lexiflow/api/routes/: __init__.py  ingestion.py  query.py
lexiflow-ai/src/lexiflow/api/schemas/: __init__.py  requests.py  responses.py
lexiflow-ai/src/lexiflow/core/: __init__.py  config.py  state.py
lexiflow-ai/src/lexiflow/core/interfaces/: __init__.py  document_parser.py  embedder.py  llm_provider.py  vector_store.py
lexiflow-ai/src/lexiflow/infrastructure/: __init__.py
lexiflow-ai/src/lexiflow/infrastructure/embedders/: openai_embedder.py
lexiflow-ai/src/lexiflow/infrastructure/llm/: openai_llm.py
lexiflow-ai/src/lexiflow/infrastructure/parsers/: pypdf_parser.py
lexiflow-ai/src/lexiflow/infrastructure/vector_stores/: chroma_store.py  pgvector_store.py
lexiflow-ai/src/lexiflow/middleware/: logging_middleware.py
lexiflow-ai/src/lexiflow/orchestration/: __init__.py  graph.py  router.py
lexiflow-ai/src/lexiflow/services/: __init__.py  ingestion_service.py  query_service.py
lexiflow-ai/tests/: conftest.py
lexiflow-ai/tests/integration/: test_orchestration.py  test_organs.py
lexiflow-ai/tests/unit/agents/: test_critic.py  test_retriever.py
