# pyproject.toml
[project]
name = "lexiflow-ai"
version = "0.1.0"
description = "Autonomous Multi-Agent RAG Orchestrator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bonum Rajula", email = "bonumrajula01@gmail.com" }]
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.13.4",
    "pydantic-settings>=2.1.0",   # keep flexible
    "python-dotenv>=1.0.0",
    "langgraph>=0.0.20",          # keep flexible
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "chromadb>=0.4.22",
    "pypdf>=4.0.0",
    "pymupdf>=1.23.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
    "python-multipart>=0.0.6",
    "langchain-text-splitters>=0.0.1",
]

[project.scripts]
lexiflow = "lexiflow.main:app"   # Allows running `uvicorn lexiflow.main:app`

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",            # For testing FastAPI
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["lexiflow"]